# libcsystem

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  configure.ac  libcsystem-wiki.ini  libcsystem.ini  libcsystem.pc.in  libcsystem.spec.in  synclibs.sh  syncsharedlibs.sh
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libcsystem.h.in
include/libcsystem/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcsystem/: Makefile.am  libcsystem.c  libcsystem.rc.in  libcsystem_definitions.h.in  libcsystem_error.c  libcsystem_error.h  libcsystem_extern.h  libcsystem_file_io.h  libcsystem_find.h  libcsystem_getopt.c  libcsystem_getopt.h  libcsystem_glob.c  libcsystem_glob.h  libcsystem_i18n.h  libcsystem_libcerror.h  libcsystem_libclocale.h  libcsystem_libcnotify.h  libcsystem_libuna.h  libcsystem_signal.c  libcsystem_signal.h  libcsystem_string.c  libcsystem_string.h  libcsystem_support.c  libcsystem_support.h  libcsystem_types.h  libcsystem_unused.h
manuals/: Makefile.am  libcsystem.3
msvscpp/: Makefile.am  libcsystem.sln
msvscpp/csystem_test_error/: csystem_test_error.vcproj
msvscpp/csystem_test_get_version/: csystem_test_get_version.vcproj
msvscpp/csystem_test_getopt/: csystem_test_getopt.vcproj
msvscpp/csystem_test_support/: csystem_test_support.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libuna/: libuna.vcproj
tests/: Makefile.am  csystem_test_error.c  csystem_test_get_version.c  csystem_test_getopt.c  csystem_test_libcerror.h  csystem_test_libcstring.h  csystem_test_libcsystem.h  csystem_test_macros.h  csystem_test_memory.c  csystem_test_memory.h  csystem_test_support.c  csystem_test_unused.h  test_api_functions.sh  test_library.ps1  test_library.sh
