MSVSCPP_FILES = \
	csystem_test_get_version/csystem_test_get_version.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libuna/libuna.vcproj \
	libcsystem.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

