MSVSCPP_FILES = \
	csystem_test_support/csystem_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcsystem/libcsystem.vcproj \
	libuna/libuna.vcproj \
	libcsystem.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

