MSVSCPP_FILES = \
	csystem_test_error/csystem_test_error.vcproj \
	csystem_test_getopt/csystem_test_getopt.vcproj \
	csystem_test_support/csystem_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcsystem/libcsystem.vcproj \
	libuna/libuna.vcproj \
	libcsystem.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

